# freeflow-agent

./: .gitignore  AGENTS.md  README.md  commit-and-push-main.ps1  featureflow.yaml.example  package-lock.json  package.json  pyproject.toml
.agents/skills/tdd-feature-guard/: SKILL.md
.agents/skills/tdd-implementer/: SKILL.md
.agents/skills/tdd-refactorer/: SKILL.md
cli/: main.py
docs/: featureflow_plan.md  getting_started_freeflow.md
featureflow/: artifacts.py  config.py  contracts.py  errors.py  fs_ops.py  git_ops.py  ids.py  run_state.py  shell.py  storage.py  telemetry.py  time_utils.py  unified_diff.py
featureflow/llm/: __init__.py  models.py  service.py
featureflow/prompts/: planner.md  proposer.md
featureflow/workflow/: __init__.py  engine.py  graph.py  nodes.py  state.py
scripts/: commit-by-subject.ps1
tests/: conftest.py  test_artifacts_idempotency.py  test_change_request_contract.py  test_cli_apply_contract_gate.py  test_cli_gates.py  test_cli_run_next_graph_integration.py  test_cli_validate_command.py  test_config_llm.py  test_finalize_command_log_reconciliation.py  test_fs_ops_limits.py  test_fs_ops_paths.py  test_fs_ops_run_logging.py  test_llm_service.py  test_shell_allowlist.py  test_storage_runs.py  test_telemetry.py  test_web_api.py  test_workflow_apply_scope_warning.py  test_workflow_context_pack.py  test_workflow_graph_transitions.py  test_workflow_llm_fallback.py  test_workflow_nodes_mvp.py  test_workflow_state_compat.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  styles.css  types.ts
web/: api.py
(+14 files in other folders)
