[tool.poetry]
name = "freeflow"
version = "0.1.0"
description = "Freeflow agent"
authors = ["Eduardo Marques <eedumarquess@gmail.com>"]
readme = "README.md"
packages = [{ include = "featureflow" }]

[tool.poetry.scripts]
ff = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
pydantic = "^2.7.0"
typer = "^0.12.0"
fastapi = "^0.110.0"
uvicorn = "^0.30.0"
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
