[project]
name = "freeflow"
version = "0.1.0"
description = "Freeflow agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "pytest>=8.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["featureflow*", "cli*"]
